2003-03-02  Lee Mallabone <mono-docs@fonicmonkey.net>

	* en/Gtk/SpinButtonUpdatePolicy.xml:
	* en/Gtk/SpinType.xml:
	* en/Gtk/SpinButton.xml: First draft of things SpinButton related.

2003-03-01  Peter Williams  <peterw@ximian.com>

	* en/Gdk/GC.xml: Minor markup / grammar fixes.

2003-02-28  Lee Mallabone <mono-docs@fonicmonkey.net>
	
	* en/Gtk/Invisible.xml:
	* en/Gtk/Separator.xml:
	* en/Gtk/VSeparator.xml:
	* en/Gtk/GammaCurve: Hector's latest.

	* en/Gtk/Frame.xml: complete docs exluding dubious API calls.
	* en/Gtk/MenuItem: document a couple of skeleton methods

	* en/Gtk: Some corrections for wrong use of 'langword'.

2003-02-27  Martin Willemoes Hansen <mwh@sysrq.dk>
	* en/Gtk/TreeModel.xml: Fixed GetValue method signature

2003-02-25  Lee Mallabone <mono-docs@fonicmonkey.net>

	* en/Gtk/AspectFrame.xml: full doc, based on C docs.
	* en/Gtk/FileSelection.xml: first draft
	* en/Gtk/ColorSelection.xml: first draft, incorrect API left undocumented and reported as bug #38672.
	* en/Gtk/ColorSelectionDialog.xml: full doc.
	* en/Gtk/CheckMenuItem.xml: full doc, based on C docs.
	* en/Gtk/UpdateType.xml: simple docs for a simple enum.

2003-02-25  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/WrapMode.xml: From Hector.

	* en/Gtk/ButtonsType.xml:
	* en/Gtk/MessageType.xml: Can't sleep, wrote (cut-n-pasted) some
	documentation for some enums.

2003-02-25  Lee Mallabone <mono-docs@fonicmonkey.net>

	* en/Gtk/FontSelection.xml:
	* en/Gtk/FontSelectionDialog.xml: docs for Font widgets

2003-02-24  Kevin Breit  <mrproper@ximian.com>

        * en/Gtk/ArrowType.xml: Fixed a tag mismatch error that caused it to break compile.

2003-02-24  Duncan Mak  <duncan@ximian.com>

	* makefile: Make the path generic again, I forgot to revert the
	last patch after Gonzalo checked in a temporary fix to Uri.cs.

2003-02-24  Kevin Breit  <mrproper@ximian.com>

	* en/Gtk/ArrowType.xml: Removed the "To be added" from the remarks sections.
