@@ -1,5 +1,5 @@
 <Type Name="HPaned" FullName="Gtk.HPaned">
-  <TypeSignature Language="C#" Value="public class HPaned : Gtk.Paned, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public class HPaned : Gtk.Paned, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="Lee Mallabone" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>A container for two children, separated horizontally by a splitter bar.</summary>
+    <remarks><para><see cref="T:Gtk.Widget"/>s are added to this container using the <see cref="M:Gtk.Paned.Add1"/> and <see cref="M:Gtk.Paned.Add2"/> methods. See the documentation of <see cref="T:Gtk.Paned"/> for more information.</para></remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.Paned</BaseTypeName>
@@ -79,9 +79,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.HPaned'</returns>
-        <remarks>To be added</remarks>
+        <summary>Creates a new container, split horizontally.</summary>
+        <returns>A new HPaned.</returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="GType">
