@@ -1,3 +1,7 @@
+2003-03-04  Lee Mallabone <mono-docs@fonicmonkey.net>
+
+	* en/Gtk/*Paned.xml: First draft at Paned docs.
+
 2003-03-02  Lee Mallabone <mono-docs@fonicmonkey.net>
 
 	* en/Gtk/SpinButtonUpdatePolicy.xml:
